--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,9 +8,6 @@ on:
     branches:
       - master
 
-env:
-  RELEASE: 3.4.0.24
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,24 +15,22 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    #- uses: actions/cache@v2
-    #  with:
-    #    path: target
-    #    key: target-armv7hl-0
+    - uses: actions/cache@v2
+      with:
+        path: target
+        key: target-armv7hl-0
 
-    - name: Prepare
-      run: chmod -R a+rw .
-
-    - name: Build armv7hl
-      run: docker run --rm --privileged -v $PWD:/home/nemo/project coderus/sailfishos-platform-sdk:$RELEASE /bin/bash -c "
-            cd /home/nemo/project && mb2 -X -t SailfishOS-$RELEASE-armv7hl build -d -j1"
+    - name: Build armv7hl RPMS
+      uses: R1tschY/sailfish-sdk-action@v1
+      with:
+        arch: 'armv7hl'
+        release: '3.4.0.24'
+        fix-version: false
+        enable-debug: true
+        check: true
 
     - name: Upload build result
       uses: actions/upload-artifact@v2
       with:
         name: rpm-armv7hl
         path: RPMS
-
-    #- name: Check
-    #  run: docker run --rm --privileged -v $PWD:/home/nemo/project coderus/sailfishos-platform-sdk:$RELEASE /bin/bash -c "
-    #        cd /home/nemo/project && mb2 -X -t SailfishOS-$RELEASE-i486 check"
